--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,7 +7,7 @@ body {
     background-color: rgb(204, 157, 248);
 }
 
-main {
+div {
     background-color: white;
     width: 500px;
     margin: auto;
