--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,10 +1,10 @@
-* {
+body {
+    background-color: rgb(37, 111, 172);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
 }
 
-body {
-    background-color: rgb(204, 157, 248);
+h1, h2, .rdp {
+    color: rgb(0, 49, 112);
 }
 
 div {
@@ -13,4 +13,12 @@ div {
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
+    border-radius: 10pt;
+}
+
+.rdp {
+    margin-top: 30pt;
+    font-style: italic;
+    font-weight: bold;
+    text-align: center;
 }
