--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,24 +1,36 @@
 body {
-    background-color: rgb(37, 111, 172);
+    background-color: rgb(47, 128, 194);
     font-family: Arial, Helvetica, sans-serif;
 }
 
-h1, h2, .rdp {
+h1 {
+    background-color: rgb(14, 88, 148);
+    color: white;
+    text-align: center;
+    margin: -10px;
+    margin-bottom: 10px;
+    font-size: 43pt;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    text-transform: uppercase;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+h2 {
     color: rgb(0, 49, 112);
 }
 
-div {
+.texto {
+    text-align: justify;
+    text-indent: 20px;
+}
+
+main {
     background-color: white;
     width: 500px;
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
     border-radius: 10pt;
-}
-
-.rdp {
-    margin-top: 30pt;
-    font-style: italic;
-    font-weight: bold;
-    text-align: center;
 }
